<resources>
    <string name="app_name">Trailerly</string>
    <string name="movie_phrase">Кино - это жизнь, где вырезано всё скучное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre_title_label">Фильмы по жанру: %s</string>
    <string name="popular_movies">Популярные фильмы</string>
    <string name="rating_top_movies">Фильмы с высоким рейтингом</string>
    <string name="genre">Жанры</string>
    <string name="movie">Фильмы</string>
    <string name="next_trailer">Следующий трейлер</string>
    <string name="play_trailer">Воспроизвести\nтрейлер</string>
    <string name="users_vote">Пользовательские\nоценки</string>
    <string name="genre_label">Жанр:</string>

    <!-- Strings related to login -->
    <string name="password_error">Пароль должен быть не меньше 6 символов</string>
    <string name="email_error">Пожалуйста введите ваш email</string>
    <string name="onCanceled">У вас нет доступа к хранилище, пожалуйста пройдите регистрацию!</string>
    <string name="disconnected">ОТСОЕДИНЕН</string>
    <string name="connect_internet">Подключитесь к интернету что бы получить доступ к этой части приложения.</string>
    <string name="successful_sign_up">Регистрация прошла успешно</string>
    <string name="failed_sign_in">Ошибка при входе</string>
    <string name="user_is_null">Пользователь не найден..</string>
    <string name="no_connection">Нет подключения к интернету!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--    <string name="welcome">"Добро пожаловать в Tron!"</string>-->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="email">Эмайл</string>
    <string name="password">Пароль</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forget_password">Забыли Пароль? </string>
    <string name="welcome">Добро пожаловать</string>
    <string name="please_enter_your_name">Пожалуйста, введите ваше имя</string>
    <string name="name">Имя</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="btn_submit">Потвердить</string>
    <string name="girl">Женщина</string>
    <string name="continue_sign">Продолжить</string>
    <string name="have_account_question">Уже есть аккаунт?</string>
    <string name="havent_account_question">Ещё нет аккаунта?</string>
    <string name="action_sign_in">Войти</string>
    <string name="sign_up_rules">Пожалуйста, введите ваше имя,email, и придумайте себе пaроль</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_in_with_google">Войти с помощью Google</string>

    <string name="sign_in_title">Вход</string>

    <string name="sign_in_rules">Пожалуйста, введите ваш email и пароль для входа в аккаунт</string>

    <string name="sign_forget_title">Cброс пароля</string>

    <string name="sign_forget_rules">Потвердите ваш email, и проверьте вашу почту</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sigin_as_guest">Войти как гость</string>
    <string name="movie_name_label">Название:</string>
    <string name="release_dat_label">Дата релиза:</string>

    <!-- Delete Account -->
    <string name="delete_account_title">Удалить аккаунт</string>
    <string name="delete_account_description">Это действие нельзя отменить. Все ваши данные будут безвозвратно удалены.</string>
    <string name="delete_account_warning_title">Внимание!</string>
    <string name="delete_account_warning_text">• Все данные будут удалены\n• История просмотров исчезнет\n• Настройки будут сброшены\n• Восстановление невозможно</string>
    <string name="delete_account_button">Удалить аккаунт</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password_required">Введите пароль для подтверждения</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="account_deleted">Аккаунт успешно удален</string>
    <string name="delete_failed">Ошибка при удалении аккаунта</string>
    <string name="recent_login_required">Требуется повторная авторизация</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="settings">Настройки</string>
    <string name="google_reauth_required">Нужен повторный вход через Google</string>
    <string name="reauth_provider_not_found">Не удалось определить способ повторной авторизации</string>

</resources>