<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_background">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_robot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/app_name"
            app:layout_constraintDimensionRatio="W,1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintWidth_percent="0.3"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/robot_playing_computer" />


        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/graphiklcg_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/welcome"
            android:textColor="@color/icon_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_robot" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sign_activity_backround"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name">

            <TextView
                android:id="@+id/sign_rules_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/sign_in_title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/sign_in_rules"
                android:textColor="@color/primary_text"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorPrimary"
                android:padding="2dp"
                android:visibility="gone" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="8dp"
                android:hint="@string/email"
                android:textColorHint="@color/secondary_text"
                app:boxBackgroundColor="@color/grey2"

                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintTextColor="@color/colorPrimary">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="7dp"

                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/secondary_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/secondary_text"
                app:boxBackgroundColor="@color/grey2"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintTextColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="7dp"
                    android:inputType="textPassword"
                    android:textColor="@color/secondary_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_Google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sign_in_with_google" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:id="@+id/anonymous"
                android:fontFamily="@font/graphiklcg_medium"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/round_menu_color"
                android:text="@string/sigin_as_guest"/>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/sign_activity_backround"
            android:fontFamily="@font/graphiklcg_medium"
            android:orientation="vertical"
            android:padding="8dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:autoSizeTextType="none"
            app:layout_constraintBottom_toTopOf="@id/tv_sign_have_que"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintWidth_percent="0.6" />


        <LinearLayout
            android:id="@+id/tv_sign_have_que"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signIn">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:text="@string/havent_account_question"
                android:textAlignment="textEnd"
                android:textColor="@color/primary_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/linkSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>